# Phase-II-Todo-Full-Stack-Web-Application

./: .gitignore  QWEN.md  README.md  cookies.txt
.qwen/agents/: code-implementor.md  specification-architect.md
.qwen/skills/: PythonCodeQualityEnforcer.md  SpecificationValidator.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  QWEN.md  README.md  add_missing_columns.py  auth.py  better_auth_setup.py  check_model_def.py  check_schema.py  clear_database.py  config.py  database.py  debug_create_task.py  debug_creation.py  debug_import.py  debug_task_creation.py  inspect_model.py  main.py  migrate_schema.py  models.py  pyproject.toml  recreate_from_model.py  recreate_tasks_table.py  requirements.txt  run_server.py  schemas.py  simple_test.py  test_auth.py  test_auth_flow.py  test_basic_functionality.py  test_comprehensive_auth.py  test_datetime.py  test_exact_model.py  test_field_issue.py  test_fresh_import.py  test_model.py  test_priority_update.py  test_task_creation.py  update_schema.py  verify_tables.py
backend/models/: __init__.py
backend/routes/: __init__.py  auth.py  tasks.py
backend/tests/: test_auth.py  test_tasks.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EditTaskDialog.tsx  MobileSidebar.tsx  NewTaskDialog.tsx  Sidebar.tsx
specs/001-backend-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vip-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+60 files in other folders)
